<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/changeFontTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/change_Font_Color"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spinnerBack"
        android:text="@string/ChangeFont"
        android:textSize="18sp"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/spinnerFontFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:entries="@array/FontStyle"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spinnerAlign"
        android:text="@string/Margin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spinnerFontFamily"
        android:text="@string/LineHeight"
        android:textSize="18sp"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/spinnerLH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinnerAlign"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/songName"
        android:layout_alignTop="@+id/spinnerAlign"
        android:entries="@array/LineHeight"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/spinnerRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerAlign"
        android:layout_below="@+id/textView8"
        android:entries="@array/Margin"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/spinnerLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/spinnerRight"
        android:layout_toLeftOf="@+id/spinnerAlign"
        android:entries="@array/Margin"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/spinnerAlign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_toRightOf="@+id/spinnerLH"
        android:entries="@array/testAlignOption"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/songName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/spinnerColor"
            android:text="@string/ChangeBackgroundColor"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerColor"
            android:layout_toRightOf="@+id/songName"
            android:entries="@array/ColorBack" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerBack"
            android:layout_toRightOf="@+id/textView5"
            android:text="@string/FontSize"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerFS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView5"
            android:layout_alignLeft="@+id/textView3"
            android:entries="@array/FontSize" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignParentTop="true"
        android:entries="@array/ColorFont"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/spinnerAlign"
        android:text="@string/TextAlign"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="18sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spinnerRight"
        android:text="@string/DefaultSettings"
        android:visibility="gone" />

</LinearLayout>